Analizadores/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ID
    LS

Grammar

Rule 0     S' -> init
Rule 1     init -> list_commands
Rule 2     list_commands -> list_commands commands
Rule 3     list_commands -> commands
Rule 4     commands -> command_execute
Rule 5     commands -> command_mkdisk
Rule 6     commands -> command_rmdisk
Rule 7     commands -> command_fdisk
Rule 8     commands -> command_mount
Rule 9     commands -> command_unmount
Rule 10    commands -> command_mkfs
Rule 11    commands -> command_login
Rule 12    commands -> command_logout
Rule 13    commands -> command_mkgrp
Rule 14    commands -> command_rmgrp
Rule 15    commands -> command_mkusr
Rule 16    commands -> command_rmusr
Rule 17    commands -> command_mkfile
Rule 18    commands -> command_cat
Rule 19    commands -> command_rep
Rule 20    commands -> command_pause
Rule 21    command_pause -> PAUSE
Rule 22    command_execute -> EXECUTE GUION PATH IGUAL CADENA
Rule 23    command_mkdisk -> MKDISK parameters_mkdisk
Rule 24    parameters_mkdisk -> parameters_mkdisk parameter_mkdisk
Rule 25    parameters_mkdisk -> parameter_mkdisk
Rule 26    parameter_mkdisk -> param_size
Rule 27    parameter_mkdisk -> param_path
Rule 28    parameter_mkdisk -> param_unit
Rule 29    parameter_mkdisk -> param_fit
Rule 30    command_rmdisk -> RMDISK GUION PATH IGUAL CADENA
Rule 31    command_fdisk -> FDISK parameters_fdisk
Rule 32    parameters_fdisk -> parameters_fdisk parameter_fdisk
Rule 33    parameters_fdisk -> parameter_fdisk
Rule 34    parameter_fdisk -> param_size
Rule 35    parameter_fdisk -> param_path
Rule 36    parameter_fdisk -> param_unit
Rule 37    parameter_fdisk -> param_name
Rule 38    parameter_fdisk -> param_type
Rule 39    parameter_fdisk -> param_fit
Rule 40    parameter_fdisk -> param_delete
Rule 41    parameter_fdisk -> param_add
Rule 42    command_mount -> MOUNT parameters_mount
Rule 43    parameters_mount -> parameters_mount parameter_mount
Rule 44    parameters_mount -> parameter_mount
Rule 45    parameter_mount -> param_path
Rule 46    parameter_mount -> param_name
Rule 47    command_unmount -> UNMOUNT GUION ID_DISK IGUAL CADENA
Rule 48    command_mkfs -> MKFS parameters_mkfs
Rule 49    parameters_mkfs -> parameters_mkfs parameter_mkfs
Rule 50    parameters_mkfs -> parameter_mkfs
Rule 51    parameter_mkfs -> param_id
Rule 52    parameter_mkfs -> param_type
Rule 53    parameter_mkfs -> param_fs
Rule 54    command_login -> LOGIN parameters_login
Rule 55    parameters_login -> parameters_login parameter_login
Rule 56    parameters_login -> parameter_login
Rule 57    parameter_login -> param_user
Rule 58    parameter_login -> param_password
Rule 59    parameter_login -> param_id
Rule 60    command_logout -> LOGOUT
Rule 61    command_mkgrp -> MKGRP GUION NAME IGUAL CADENA
Rule 62    command_rmgrp -> RMGRP GUION NAME IGUAL CADENA
Rule 63    command_mkusr -> MKUSR parameters_mkusr
Rule 64    parameters_mkusr -> parameters_mkusr parameter_mkusr
Rule 65    parameters_mkusr -> parameter_mkusr
Rule 66    parameter_mkusr -> param_user
Rule 67    parameter_mkusr -> param_password
Rule 68    parameter_mkusr -> param_grp
Rule 69    command_rmusr -> RMUSR GUION USER IGUAL CADENA
Rule 70    command_mkfile -> MKFILE parameters_mkfile
Rule 71    parameters_mkfile -> parameters_mkfile parameter_mkfile
Rule 72    parameters_mkfile -> parameter_mkfile
Rule 73    parameter_mkfile -> param_path
Rule 74    parameter_mkfile -> param_r
Rule 75    parameter_mkfile -> param_size
Rule 76    parameter_mkfile -> param_cont
Rule 77    command_cat -> CAT parameters_cat
Rule 78    parameters_cat -> parameters_cat parameter_cat
Rule 79    parameters_cat -> parameter_cat
Rule 80    parameter_cat -> param_file
Rule 81    command_rep -> REP parameters_rep
Rule 82    parameters_rep -> parameters_rep parameter_rep
Rule 83    parameters_rep -> parameter_rep
Rule 84    parameter_rep -> param_name_rep
Rule 85    parameter_rep -> param_path
Rule 86    parameter_rep -> param_id
Rule 87    parameter_rep -> param_r
Rule 88    param_name_rep -> GUION NAME IGUAL MBR
Rule 89    param_name_rep -> GUION NAME IGUAL DISK
Rule 90    param_name_rep -> GUION NAME IGUAL INODE
Rule 91    param_name_rep -> GUION NAME IGUAL JOURNALING
Rule 92    param_name_rep -> GUION NAME IGUAL BLOCK
Rule 93    param_name_rep -> GUION NAME IGUAL BM_INODE
Rule 94    param_name_rep -> GUION NAME IGUAL BM_BLOCK
Rule 95    param_name_rep -> GUION NAME IGUAL TREE
Rule 96    param_name_rep -> GUION NAME IGUAL SB
Rule 97    param_name_rep -> GUION NAME IGUAL FILE
Rule 98    param_ruta -> GUION RUTA IGUAL CADENA
Rule 99    param_size -> GUION SIZE IGUAL ENTERO
Rule 100   param_path -> GUION PATH IGUAL CADENA
Rule 101   param_unit -> GUION UNIT IGUAL UNIDAD
Rule 102   param_fit -> GUION FIT IGUAL FITSYM
Rule 103   param_name -> GUION NAME IGUAL CADENA
Rule 104   param_type -> GUION TYPE IGUAL TIPO
Rule 105   param_type -> GUION TYPE IGUAL FULL
Rule 106   param_delete -> GUION DELETE IGUAL FULL
Rule 107   param_add -> GUION ADD IGUAL ENTERO
Rule 108   param_id -> GUION ID_DISK IGUAL CADENA
Rule 109   param_fs -> GUION FS_DISK IGUAL FS
Rule 110   param_user -> GUION USER IGUAL CADENA
Rule 111   param_password -> GUION PASSWORD IGUAL CADENA
Rule 112   param_grp -> GUION GRP IGUAL CADENA
Rule 113   param_r -> GUION ERRE
Rule 114   param_cont -> GUION CONT IGUAL CADENA
Rule 115   param_file -> GUION FILE ENTERO IGUAL CADENA

Terminals, with rules where they appear

ADD                  : 107
BLOCK                : 92
BM_BLOCK             : 94
BM_INODE             : 93
CADENA               : 22 30 47 61 62 69 98 100 103 108 110 111 112 114 115
CAT                  : 77
CONT                 : 114
DELETE               : 106
DISK                 : 89
ENTERO               : 99 107 115
ERRE                 : 113
EXECUTE              : 22
FDISK                : 31
FILE                 : 97 115
FIT                  : 102
FITSYM               : 102
FS                   : 109
FS_DISK              : 109
FULL                 : 105 106
GRP                  : 112
GUION                : 22 30 47 61 62 69 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105 106 107 108 109 110 111 112 113 114 115
ID                   : 
ID_DISK              : 47 108
IGUAL                : 22 30 47 61 62 69 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105 106 107 108 109 110 111 112 114 115
INODE                : 90
JOURNALING           : 91
LOGIN                : 54
LOGOUT               : 60
LS                   : 
MBR                  : 88
MKDISK               : 23
MKFILE               : 70
MKFS                 : 48
MKGRP                : 61
MKUSR                : 63
MOUNT                : 42
NAME                 : 61 62 88 89 90 91 92 93 94 95 96 97 103
PASSWORD             : 111
PATH                 : 22 30 100
PAUSE                : 21
REP                  : 81
RMDISK               : 30
RMGRP                : 62
RMUSR                : 69
RUTA                 : 98
SB                   : 96
SIZE                 : 99
TIPO                 : 104
TREE                 : 95
TYPE                 : 104 105
UNIDAD               : 101
UNIT                 : 101
UNMOUNT              : 47
USER                 : 69 110
error                : 

Nonterminals, with rules where they appear

command_cat          : 18
command_execute      : 4
command_fdisk        : 7
command_login        : 11
command_logout       : 12
command_mkdisk       : 5
command_mkfile       : 17
command_mkfs         : 10
command_mkgrp        : 13
command_mkusr        : 15
command_mount        : 8
command_pause        : 20
command_rep          : 19
command_rmdisk       : 6
command_rmgrp        : 14
command_rmusr        : 16
command_unmount      : 9
commands             : 2 3
init                 : 0
list_commands        : 1 2
param_add            : 41
param_cont           : 76
param_delete         : 40
param_file           : 80
param_fit            : 29 39
param_fs             : 53
param_grp            : 68
param_id             : 51 59 86
param_name           : 37 46
param_name_rep       : 84
param_password       : 58 67
param_path           : 27 35 45 73 85
param_r              : 74 87
param_ruta           : 
param_size           : 26 34 75
param_type           : 38 52
param_unit           : 28 36
param_user           : 57 66
parameter_cat        : 78 79
parameter_fdisk      : 32 33
parameter_login      : 55 56
parameter_mkdisk     : 24 25
parameter_mkfile     : 71 72
parameter_mkfs       : 49 50
parameter_mkusr      : 64 65
parameter_mount      : 43 44
parameter_rep        : 82 83
parameters_cat       : 77 78
parameters_fdisk     : 31 32
parameters_login     : 54 55
parameters_mkdisk    : 23 24
parameters_mkfile    : 70 71
parameters_mkfs      : 48 49
parameters_mkusr     : 63 64
parameters_mount     : 42 43
parameters_rep       : 81 82

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . list_commands
    (2) list_commands -> . list_commands commands
    (3) list_commands -> . commands
    (4) commands -> . command_execute
    (5) commands -> . command_mkdisk
    (6) commands -> . command_rmdisk
    (7) commands -> . command_fdisk
    (8) commands -> . command_mount
    (9) commands -> . command_unmount
    (10) commands -> . command_mkfs
    (11) commands -> . command_login
    (12) commands -> . command_logout
    (13) commands -> . command_mkgrp
    (14) commands -> . command_rmgrp
    (15) commands -> . command_mkusr
    (16) commands -> . command_rmusr
    (17) commands -> . command_mkfile
    (18) commands -> . command_cat
    (19) commands -> . command_rep
    (20) commands -> . command_pause
    (22) command_execute -> . EXECUTE GUION PATH IGUAL CADENA
    (23) command_mkdisk -> . MKDISK parameters_mkdisk
    (30) command_rmdisk -> . RMDISK GUION PATH IGUAL CADENA
    (31) command_fdisk -> . FDISK parameters_fdisk
    (42) command_mount -> . MOUNT parameters_mount
    (47) command_unmount -> . UNMOUNT GUION ID_DISK IGUAL CADENA
    (48) command_mkfs -> . MKFS parameters_mkfs
    (54) command_login -> . LOGIN parameters_login
    (60) command_logout -> . LOGOUT
    (61) command_mkgrp -> . MKGRP GUION NAME IGUAL CADENA
    (62) command_rmgrp -> . RMGRP GUION NAME IGUAL CADENA
    (63) command_mkusr -> . MKUSR parameters_mkusr
    (69) command_rmusr -> . RMUSR GUION USER IGUAL CADENA
    (70) command_mkfile -> . MKFILE parameters_mkfile
    (77) command_cat -> . CAT parameters_cat
    (81) command_rep -> . REP parameters_rep
    (21) command_pause -> . PAUSE

    EXECUTE         shift and go to state 21
    MKDISK          shift and go to state 22
    RMDISK          shift and go to state 23
    FDISK           shift and go to state 24
    MOUNT           shift and go to state 25
    UNMOUNT         shift and go to state 26
    MKFS            shift and go to state 27
    LOGIN           shift and go to state 28
    LOGOUT          shift and go to state 29
    MKGRP           shift and go to state 30
    RMGRP           shift and go to state 31
    MKUSR           shift and go to state 32
    RMUSR           shift and go to state 33
    MKFILE          shift and go to state 34
    CAT             shift and go to state 35
    REP             shift and go to state 36
    PAUSE           shift and go to state 37

    init                           shift and go to state 1
    list_commands                  shift and go to state 2
    commands                       shift and go to state 3
    command_execute                shift and go to state 4
    command_mkdisk                 shift and go to state 5
    command_rmdisk                 shift and go to state 6
    command_fdisk                  shift and go to state 7
    command_mount                  shift and go to state 8
    command_unmount                shift and go to state 9
    command_mkfs                   shift and go to state 10
    command_login                  shift and go to state 11
    command_logout                 shift and go to state 12
    command_mkgrp                  shift and go to state 13
    command_rmgrp                  shift and go to state 14
    command_mkusr                  shift and go to state 15
    command_rmusr                  shift and go to state 16
    command_mkfile                 shift and go to state 17
    command_cat                    shift and go to state 18
    command_rep                    shift and go to state 19
    command_pause                  shift and go to state 20

state 1

    (0) S' -> init .



state 2

    (1) init -> list_commands .
    (2) list_commands -> list_commands . commands
    (4) commands -> . command_execute
    (5) commands -> . command_mkdisk
    (6) commands -> . command_rmdisk
    (7) commands -> . command_fdisk
    (8) commands -> . command_mount
    (9) commands -> . command_unmount
    (10) commands -> . command_mkfs
    (11) commands -> . command_login
    (12) commands -> . command_logout
    (13) commands -> . command_mkgrp
    (14) commands -> . command_rmgrp
    (15) commands -> . command_mkusr
    (16) commands -> . command_rmusr
    (17) commands -> . command_mkfile
    (18) commands -> . command_cat
    (19) commands -> . command_rep
    (20) commands -> . command_pause
    (22) command_execute -> . EXECUTE GUION PATH IGUAL CADENA
    (23) command_mkdisk -> . MKDISK parameters_mkdisk
    (30) command_rmdisk -> . RMDISK GUION PATH IGUAL CADENA
    (31) command_fdisk -> . FDISK parameters_fdisk
    (42) command_mount -> . MOUNT parameters_mount
    (47) command_unmount -> . UNMOUNT GUION ID_DISK IGUAL CADENA
    (48) command_mkfs -> . MKFS parameters_mkfs
    (54) command_login -> . LOGIN parameters_login
    (60) command_logout -> . LOGOUT
    (61) command_mkgrp -> . MKGRP GUION NAME IGUAL CADENA
    (62) command_rmgrp -> . RMGRP GUION NAME IGUAL CADENA
    (63) command_mkusr -> . MKUSR parameters_mkusr
    (69) command_rmusr -> . RMUSR GUION USER IGUAL CADENA
    (70) command_mkfile -> . MKFILE parameters_mkfile
    (77) command_cat -> . CAT parameters_cat
    (81) command_rep -> . REP parameters_rep
    (21) command_pause -> . PAUSE

    $end            reduce using rule 1 (init -> list_commands .)
    EXECUTE         shift and go to state 21
    MKDISK          shift and go to state 22
    RMDISK          shift and go to state 23
    FDISK           shift and go to state 24
    MOUNT           shift and go to state 25
    UNMOUNT         shift and go to state 26
    MKFS            shift and go to state 27
    LOGIN           shift and go to state 28
    LOGOUT          shift and go to state 29
    MKGRP           shift and go to state 30
    RMGRP           shift and go to state 31
    MKUSR           shift and go to state 32
    RMUSR           shift and go to state 33
    MKFILE          shift and go to state 34
    CAT             shift and go to state 35
    REP             shift and go to state 36
    PAUSE           shift and go to state 37

    commands                       shift and go to state 38
    command_execute                shift and go to state 4
    command_mkdisk                 shift and go to state 5
    command_rmdisk                 shift and go to state 6
    command_fdisk                  shift and go to state 7
    command_mount                  shift and go to state 8
    command_unmount                shift and go to state 9
    command_mkfs                   shift and go to state 10
    command_login                  shift and go to state 11
    command_logout                 shift and go to state 12
    command_mkgrp                  shift and go to state 13
    command_rmgrp                  shift and go to state 14
    command_mkusr                  shift and go to state 15
    command_rmusr                  shift and go to state 16
    command_mkfile                 shift and go to state 17
    command_cat                    shift and go to state 18
    command_rep                    shift and go to state 19
    command_pause                  shift and go to state 20

state 3

    (3) list_commands -> commands .

    EXECUTE         reduce using rule 3 (list_commands -> commands .)
    MKDISK          reduce using rule 3 (list_commands -> commands .)
    RMDISK          reduce using rule 3 (list_commands -> commands .)
    FDISK           reduce using rule 3 (list_commands -> commands .)
    MOUNT           reduce using rule 3 (list_commands -> commands .)
    UNMOUNT         reduce using rule 3 (list_commands -> commands .)
    MKFS            reduce using rule 3 (list_commands -> commands .)
    LOGIN           reduce using rule 3 (list_commands -> commands .)
    LOGOUT          reduce using rule 3 (list_commands -> commands .)
    MKGRP           reduce using rule 3 (list_commands -> commands .)
    RMGRP           reduce using rule 3 (list_commands -> commands .)
    MKUSR           reduce using rule 3 (list_commands -> commands .)
    RMUSR           reduce using rule 3 (list_commands -> commands .)
    MKFILE          reduce using rule 3 (list_commands -> commands .)
    CAT             reduce using rule 3 (list_commands -> commands .)
    REP             reduce using rule 3 (list_commands -> commands .)
    PAUSE           reduce using rule 3 (list_commands -> commands .)
    $end            reduce using rule 3 (list_commands -> commands .)


state 4

    (4) commands -> command_execute .

    EXECUTE         reduce using rule 4 (commands -> command_execute .)
    MKDISK          reduce using rule 4 (commands -> command_execute .)
    RMDISK          reduce using rule 4 (commands -> command_execute .)
    FDISK           reduce using rule 4 (commands -> command_execute .)
    MOUNT           reduce using rule 4 (commands -> command_execute .)
    UNMOUNT         reduce using rule 4 (commands -> command_execute .)
    MKFS            reduce using rule 4 (commands -> command_execute .)
    LOGIN           reduce using rule 4 (commands -> command_execute .)
    LOGOUT          reduce using rule 4 (commands -> command_execute .)
    MKGRP           reduce using rule 4 (commands -> command_execute .)
    RMGRP           reduce using rule 4 (commands -> command_execute .)
    MKUSR           reduce using rule 4 (commands -> command_execute .)
    RMUSR           reduce using rule 4 (commands -> command_execute .)
    MKFILE          reduce using rule 4 (commands -> command_execute .)
    CAT             reduce using rule 4 (commands -> command_execute .)
    REP             reduce using rule 4 (commands -> command_execute .)
    PAUSE           reduce using rule 4 (commands -> command_execute .)
    $end            reduce using rule 4 (commands -> command_execute .)


state 5

    (5) commands -> command_mkdisk .

    EXECUTE         reduce using rule 5 (commands -> command_mkdisk .)
    MKDISK          reduce using rule 5 (commands -> command_mkdisk .)
    RMDISK          reduce using rule 5 (commands -> command_mkdisk .)
    FDISK           reduce using rule 5 (commands -> command_mkdisk .)
    MOUNT           reduce using rule 5 (commands -> command_mkdisk .)
    UNMOUNT         reduce using rule 5 (commands -> command_mkdisk .)
    MKFS            reduce using rule 5 (commands -> command_mkdisk .)
    LOGIN           reduce using rule 5 (commands -> command_mkdisk .)
    LOGOUT          reduce using rule 5 (commands -> command_mkdisk .)
    MKGRP           reduce using rule 5 (commands -> command_mkdisk .)
    RMGRP           reduce using rule 5 (commands -> command_mkdisk .)
    MKUSR           reduce using rule 5 (commands -> command_mkdisk .)
    RMUSR           reduce using rule 5 (commands -> command_mkdisk .)
    MKFILE          reduce using rule 5 (commands -> command_mkdisk .)
    CAT             reduce using rule 5 (commands -> command_mkdisk .)
    REP             reduce using rule 5 (commands -> command_mkdisk .)
    PAUSE           reduce using rule 5 (commands -> command_mkdisk .)
    $end            reduce using rule 5 (commands -> command_mkdisk .)
